mod: code refactoring
- mod: update api specification
- fix: db tables init (transaction & orderline)
- fix: schema validation for create, code duplication
