# api/v1/validate.go
@@ -9,34 +9,34 @@ import (
 )
 
 const (
-	users              string = "users"
-	activateUser       string = users + "/activate"
-	roles              string = "roles"
-	storages           string = "storages"
-	uoms               string = "uoms"
-	currencies         string = "currencies"
-	activateCurrency   string = currencies + "/activate"
-	items              string = "items"
-	transaction        string = "transactions"
-	transactionAddNote string = transaction + "/add-note"
-	orderlineAddNote   string = transaction + "/orderline-note"
-	transactionCancel  string = transaction + "/cancel"
+	users             string = "users"
+	activateUser      string = users + "/activate"
+	roles             string = "roles"
+	storages          string = "storages"
+	uoms              string = "uoms"
+	currencies        string = "currencies"
+	activateCurrency  string = currencies + "/activate"
+	items             string = "items"
+	transaction       string = "transactions"
+	transactionNote   string = transaction + "/note"
+	orderlinesNote    string = transaction + "/orderline-note"
+	transactionCancel string = transaction + "/cancel"
 )
 
 func IsValidPathMethod(method, segment string) bool {
 	var valid = map[string][]string{
-		users:              {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
-		activateUser:       {http.MethodPut},
-		roles:              {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
-		storages:           {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
-		uoms:               {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
-		currencies:         {http.MethodGet},
-		activateCurrency:   {http.MethodPut},
-		items:              {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
-		transaction:        {http.MethodGet, http.MethodPost},
-		transactionAddNote: {http.MethodPut},
-		orderlineAddNote:   {http.MethodPut},
-		transactionCancel:  {http.MethodPut},
+		users:             {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
+		activateUser:      {http.MethodPut},
+		roles:             {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
+		storages:          {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
+		uoms:              {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
+		currencies:        {http.MethodGet},
+		activateCurrency:  {http.MethodPut},
+		items:             {http.MethodGet, http.MethodPost, http.MethodPut, http.MethodDelete},
+		transaction:       {http.MethodGet, http.MethodPost},
+		transactionNote:   {http.MethodPut},
+		orderlinesNote:    {http.MethodPut},
+		transactionCancel: {http.MethodPut},
 	}
 
 	methods, exist := valid[segment]
